# tibble

./: pyproject.toml  test.py
src/tibble/: __init__.py  input.py  public.py  tibble.py  utils.py  verbs_columns.py  verbs_join.py  verbs_output.py  verbs_reshape.py  verbs_rows.py  verbs_transform.py
src/tibble.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
