[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tibble"
version = "0.1.0"
description = "Chained-Optimized Extensions to Pandas"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Taylor Arnold", email = "tarnold2@richmond.edu"}
]
keywords = ["pandas", "dataframe", "data-analysis", "extensions"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "mypy>=1.19.0",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.3.251201",
    "plotnine>=0.15.1",
    "ruff>=0.14.7",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "torch>=2.9.1",
]

[tool.ruff]
lint.select = ["E", "F", "I"]

[project.urls]
Homepage = "https://github.com/taylor-arnold"
Documentation = "https://github.com/taylor-arnold"
Repository = "https://github.com/taylor-arnold"

[tool.setuptools.packages.find]
where = ["src"]
